--- a/site1/index.html
+++ b/site1/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <!--    fontawesome-->
+    <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
             integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
             crossorigin="anonymous"></script>
@@ -16,7 +16,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-dark">
+
+    <!-- navigation section -->
+    <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
 
         <!-- brand logo -->
         <a href="#" class="navbar-brand ml-2">
@@ -62,6 +64,22 @@
         </div>
 
     </nav>
+
+    <!-- banner section -->
+    <section>
+        <div class="container-fluid">
+            <div class="row bg-info justify-content-center align-items-center" style="height: 100vh">
+                <div class="col-sm-10 text-center">
+                    <h1 class="display-2 text-capitalize">
+                        <span class="text-warning">Pure Bootstrap</span>
+                        <span class="text-white font-weight-bold">Website</span>
+                    </h1>
+                    <h2 class="font-italic font-weight-light text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, quo.</h2>
+                    <a href="#" class="btn btn-outline-warning px-4 m-3">Press Here</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
