--- a/site1/index.html
+++ b/site1/index.html
@@ -81,6 +81,43 @@
         </div>
     </section>
 
+    <!-- skill section -->
+    <section class="bg-light p-5">
+        <div class="container-fluid">
+            <!-- title -->
+            <div class="row">
+                <div class="col text-center mb-3">
+                    <h1 class="text-warning display-2">Skills</h1>
+                    <p class="lead text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, saepe.</p>
+                </div>
+            </div>
+
+            <!-- skill set -->
+            <div class="row text-center">
+                <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+                    <i class="fas fa-desktop fa-6x text-warning mb-3"></i>
+                    <h1 class="text-secondary">Development</h1>
+                    <p class="text-muted my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est maxime rerum velit! Temporibus.</p>
+                    <a href="#" class="btn btn-outline-warning">Learn More</a>
+                </div>
+
+                <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+                    <i class="fas fa-edit fa-6x text-warning mb-3"></i>
+                    <h1 class="text-secondary">Design</h1>
+                    <p class="text-muted my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est maxime rerum velit! Temporibus.</p>
+                    <a href="#" class="btn btn-outline-warning">Learn More</a>
+                </div>
+
+                <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+                    <i class="fas fa-cogs fa-6x text-warning mb-3"></i>
+                    <h1 class="text-secondary">Creativity</h1>
+                    <p class="text-muted my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est maxime rerum velit! Temporibus.</p>
+                    <a href="#" class="btn btn-outline-warning">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
