add project section

--- a/site1/index.html
+++ b/site1/index.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
     <!-- navigation section -->
     <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
 
@@ -81,7 +80,7 @@
         </div>
     </section>
 
-    <!-- skill section -->
+    <!-- skills section -->
     <section class="bg-light p-5">
         <div class="container-fluid">
             <!-- title -->
@@ -113,6 +112,46 @@
                     <h1 class="text-secondary">Creativity</h1>
                     <p class="text-muted my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est maxime rerum velit! Temporibus.</p>
                     <a href="#" class="btn btn-outline-warning">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- projects section-->
+    <section class="p-5">
+        <div class="container-fluid">
+            <!-- title -->
+            <div class="row">
+                <div class="col text-center mb-3">
+                    <h1 class="text-warning display-2">Projects</h1>
+                    <p class="lead text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, saepe.</p>
+                </div>
+            </div>
+
+            <!-- projects -->
+            <div class="row">
+                <div class="col-lg-3 col-sm-6">
+                    <img src="images/project1.jpg" alt="project1" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Project One</h2>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium autem magnam voluptates!</p>
+                </div>
+
+                <div class="col-lg-3 col-sm-6">
+                    <img src="images/project2.jpg" alt="project1" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Project Two</h2>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium autem magnam voluptates!</p>
+                </div>
+
+                <div class="col-lg-3 col-sm-6">
+                    <img src="images/project3.jpg" alt="project1" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Project Three</h2>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium autem magnam voluptates!</p>
+                </div>
+
+                <div class="col-lg-3 col-sm-6">
+                    <img src="images/project4.jpg" alt="project1" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Project Four</h2>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium autem magnam voluptates!</p>
                 </div>
             </div>
         </div>
