--- a/site1/index.html
+++ b/site1/index.html
@@ -170,7 +170,7 @@
 
             <!-- team -->
             <div class="row">
-                <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+                <div class="col-sm-10 col-lg-4 mx-auto mb-4">
                     <div class="card">
                         <img src="images/kid1.jpg" alt="team1" class="card-img-top">
                         <div class="card-body">
@@ -189,7 +189,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+                <div class="col-sm-10 col-lg-4 mx-auto mb-4">
                     <div class="card">
                         <img src="images/kid2.jpg" alt="team1" class="card-img-top">
                         <div class="card-body">
@@ -208,7 +208,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+                <div class="col-sm-10 col-lg-4 mx-auto mb-4">
                     <div class="card">
                         <img src="images/kid3.jpg" alt="team1" class="card-img-top">
                         <div class="card-body">
@@ -226,6 +226,83 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- progress section -->
+    <section class="p-5">
+        <div class="container-fluid">
+            <!-- title -->
+            <div class="row">
+                <div class="col text-center mb-3">
+                    <h1 class="text-warning display-2">Progress</h1>
+                    <p class="lead text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, saepe.</p>
+                </div>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-sm-10 col-lg-7 text-secondary">
+                    <h2>HTML</h2>
+                    <div class="progress bg-secondary mb-3">
+                        <div class="progress-bar bg-primary" style="width: 50%">50%</div>
+                    </div>
+
+                    <h2>CSS</h2>
+                    <div class="progress bg-secondary mb-3">
+                        <div class="progress-bar bg-danger" style="width: 70%">70%</div>
+                    </div>
+
+                    <h2>Javascript</h2>
+                    <div class="progress bg-secondary mb-3">
+                        <div class="progress-bar bg-warning" style="width: 90%">90%</div>
+                    </div>
+
+                    <h2>Bootstrap</h2>
+                    <div class="progress bg-secondary mb-3">
+                        <div class="progress-bar bg-success" style="width: 90%">90%</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- form section -->
+    <section class="p-5 bg-light">
+        <!-- title -->
+        <div class="row">
+            <div class="col text-center mb-3">
+                <h1 class="text-warning display-2">Contact US</h1>
+                <p class="lead text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, saepe.</p>
+            </div>
+        </div>
+
+        <!-- form -->
+        <div class="row justify-content-center">
+            <div class="col-lg-7">
+                <div class="text-center text-secondary">
+                    <h2>Got Question?</h2>
+                    <p>Stay Connected</p>
+                </div>
+
+                <form action="" class="text-muted">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control" id="email">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10" class="form-control" id="message"></textarea>
+                    </div>
+
+                    <button class="btn btn-outline-warning btn-block" type="submit">Submit</button>
+                </form>
             </div>
         </div>
     </section>
