--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -17,15 +17,17 @@
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-md navbar-light">
+        <!-- hamburger button only show on small screen -->
         <button class="navbar-toggler ml-auto mb-2 bg-light" type="button" data-toggle="collapse" data-target="#myNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
 
+        <!-- main nav bar, which consists of a sidebar and a top nav bar -->
         <div class="collapse navbar-collapse" id="myNavbar">
             <div class="container-fluid">
                 <div class="row">
                     <!-- sidebar -->
-                    <div class="col-lg-3 sidebar fixed-top">
+                    <div class="col-md-4 col-lg-3 col-xl-2 sidebar fixed-top">
                         <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">Code Dashboard</a>
 
                         <div class="bottom-border pb-3">
@@ -33,6 +35,7 @@
                             <a href="#" class="text-white">Zoe Zhan</a>
                         </div>
 
+                        <!-- menu items -->
                         <ul class="navbar-nav flex-column mt-4">
                             <li class="nav-item">
                                 <a href="#" class="nav-link text-white p-3 mb-2 current"><i class="fas fa-home text-light fa-lg mr-3"></i>Dashboard</a>
@@ -65,8 +68,37 @@
                     </div>
 
                     <!-- top nav -->
-                    <div class="col-lg-9">
+                    <div class="col-md-8 col-lg-9 col-xl-10 ml-auto bg-dark fixed-top py-2 top-navbar">
+                        <div class="row align-items-center">
+                            <div class="col-md-4">
+                                <h4 class="text-light text-uppercase mb-0">Dashboard</h4>
+                            </div>
 
+                            <div class="col-md-5">
+                                <form action="">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control search-input" placeholder="Search">
+                                        <button type="button" class="btn btn-white search-button"><i class="fas fa-search text-danger"></i></button>
+                                    </div>
+                                </form>
+                            </div>
+
+                            <div class="col-md-3">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item icon-parent">
+                                        <a href="#" class="nav-link icon-bullet"><i class="fas fa-comments text-muted fa-lg"></i></a>
+                                    </li>
+
+                                    <li class="nav-item icon-parent">
+                                        <a href="#" class="nav-link icon-bullet"><i class="fas fa-bell text-muted fa-lg"></i></a>
+                                    </li>
+
+                                    <li class="nav-item icon-parent ml-md-auto">
+                                        <a href="#" class="nav-link"><i class="fas fa-sign-out-alt text-danger fa-lg"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
