--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -66,6 +66,7 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- end of sidebar -->
 
                     <!-- top nav -->
                     <div class="col-md-8 col-lg-9 col-xl-10 ml-auto bg-dark fixed-top py-2 top-navbar">
@@ -94,17 +95,42 @@
                                     </li>
 
                                     <li class="nav-item icon-parent ml-md-auto">
-                                        <a href="#" class="nav-link"><i class="fas fa-sign-out-alt text-danger fa-lg"></i></a>
+                                        <a href="#" class="nav-link no-outline" data-toggle="modal" data-target="#sign-out">
+                                            <i class="fas fa-sign-out-alt text-danger fa-lg"></i>
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
+                    <!-- end of top nav -->
                 </div>
             </div>
         </div>
     </nav>
+    <!-- end of navbar -->
 
+    <!-- modal -->
+    <div class="modal fade" id="sign-out">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Want to leave?</h4>
+                    <button type="button" class="close no-outline" data-dismiss="modal">&times;</button>
+                </div>
+
+                <div class="modal-body">
+                    Press logout to leave
+                </div>
+
+                <div class="modal-footer">
+                    <button class="btn btn-success" type="button" data-dismiss="modal">Stay Here</button>
+                    <button class="btn btn-danger" type="button" data-dismiss="modal">Logout</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of modal -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
