--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -18,7 +18,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-md navbar-light">
         <!-- hamburger button only show on small screen -->
-        <button class="navbar-toggler ml-auto mb-2 bg-light" type="button" data-toggle="collapse" data-target="#myNavbar">
+        <button class="navbar-toggler ml-auto mb-2 bg-light no-outline" type="button" data-toggle="collapse" data-target="#myNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -220,6 +220,117 @@
         </div>
     </section>
     <!-- end of cards -->
+
+    <!-- tables -->
+    <section>
+        <div class="container-fluid">
+            <div class="row mb-5">
+                <div class="col-md-8 col-lg-9 col-xl-10 ml-auto">
+                    <div class="row">
+                        <!-- table 1 -->
+                        <div class="col-12">
+                            <h3 class="text-muted text-center mb-3">Staff Salary</h3>
+                            <table class="table bg-light text-center table-striped">
+                                <thead>
+                                    <tr class="text-muted">
+                                        <th>#</th>
+                                        <th>Name</th>
+                                        <th>Salary</th>
+                                        <th>Date</th>
+                                        <th>Content</th>
+                                    </tr>
+                                </thead>
+
+                                <tbody>
+                                    <tr>
+                                        <th>1</th>
+                                        <td>John</td>
+                                        <td>$2000</td>
+                                        <td>25/11/2018</td>
+                                        <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                                    </tr>
+                                    <tr>
+                                        <th>2</th>
+                                        <td>Zoe</td>
+                                        <td>$2000</td>
+                                        <td>25/11/2018</td>
+                                        <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                                    </tr>
+                                    <tr>
+                                        <th>3</th>
+                                        <td>Dennis</td>
+                                        <td>$2000</td>
+                                        <td>25/11/2018</td>
+                                        <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                                    </tr>
+                                    <tr>
+                                        <th>4</th>
+                                        <td>Tom</td>
+                                        <td>$2000</td>
+                                        <td>25/11/2018</td>
+                                        <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                                    </tr>
+                                    <tr>
+                                        <th>5</th>
+                                        <td>Ken</td>
+                                        <td>$2000</td>
+                                        <td>25/11/2018</td>
+                                        <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+                            <!-- pagination -->
+                            <nav>
+                                <ul class="pagination justify-content-center">
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>&laquo;</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item active">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>1</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>2</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>3</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>4</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>5</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>&raquo;</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                            <!-- end of pagination -->
+
+                        </div>
+
+                        <!-- table 2-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of tables -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
