--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -226,11 +226,11 @@
         <div class="container-fluid">
             <div class="row mb-5">
                 <div class="col-md-8 col-lg-9 col-xl-10 ml-auto">
-                    <div class="row">
+                    <div class="row align-items-center">
                         <!-- table 1 -->
-                        <div class="col-12">
+                        <div class="col-12 col-xl-6 mb-4 mb-xl-0">
                             <h3 class="text-muted text-center mb-3">Staff Salary</h3>
-                            <table class="table bg-light text-center table-striped">
+                            <table class="table bg-light text-center table-striped table-hover">
                                 <thead>
                                     <tr class="text-muted">
                                         <th>#</th>
@@ -321,10 +321,100 @@
                                 </ul>
                             </nav>
                             <!-- end of pagination -->
-
                         </div>
+                        <!-- end of table 1 -->
 
                         <!-- table 2-->
+                        <div class="col-12 col-xl-6">
+                            <h3 class="text-muted text-center mb-3">Recent Payment</h3>
+                            <table class="table table-dark table-hover text-center">
+                                <thead>
+                                <tr class="text-muted">
+                                    <th>#</th>
+                                    <th>Price</th>
+                                    <th>Salary</th>
+                                    <th>Date</th>
+                                    <th>Status</th>
+                                </tr>
+                                </thead>
+
+                                <tbody>
+                                    <tr>
+                                        <th>1</th>
+                                        <td>John</td>
+                                        <td>$2000</td>
+                                        <td>25/11/2018</td>
+                                        <td><span class="badge badge-success w-75 py-2">Approved</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th>2</th>
+                                        <td>Nick</td>
+                                        <td>$2000</td>
+                                        <td>25/11/2018</td>
+                                        <td><span class="badge badge-success w-75 py-2">Approved</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th>3</th>
+                                        <td>Alex</td>
+                                        <td>$2000</td>
+                                        <td>25/11/2018</td>
+                                        <td><span class="badge badge-danger w-75 py-2">Pending</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th>4</th>
+                                        <td>Jane</td>
+                                        <td>$2000</td>
+                                        <td>25/11/2018</td>
+                                        <td><span class="badge badge-success w-75 py-2">Approved</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th>5</th>
+                                        <td>Woody</td>
+                                        <td>$2000</td>
+                                        <td>25/11/2018</td>
+                                        <td><span class="badge badge-danger w-75 py-2">Pending</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+                            <!-- pagination -->
+                            <nav>
+                                <ul class="pagination justify-content-center">
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>Prev</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item active">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>1</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>2</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>3</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>4</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3 no-outline">
+                                            <span>Next</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                            <!-- end of pagination -->
+                        </div>
+                        <!-- end of table 2-->
                     </div>
                 </div>
             </div>
