--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -87,11 +87,11 @@
                             <div class="col-md-3">
                                 <ul class="navbar-nav">
                                     <li class="nav-item icon-parent">
-                                        <a href="#" class="nav-link icon-bullet"><i class="fas fa-comments text-muted fa-lg"></i></a>
+                                        <a href="#" class="nav-link"><i class="fas fa-comments text-muted fa-lg navbar-icon"></i></a>
                                     </li>
 
                                     <li class="nav-item icon-parent">
-                                        <a href="#" class="nav-link icon-bullet"><i class="fas fa-bell text-muted fa-lg"></i></a>
+                                        <a href="#" class="nav-link icon-bullet"><i class="fas fa-bell text-muted fa-lg navbar-icon"></i></a>
                                     </li>
 
                                     <li class="nav-item icon-parent ml-md-auto">
