--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -422,6 +422,55 @@
     </section>
     <!-- end of tables -->
 
+    <!-- progress / task list -->
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+                    <div class="row mb-4 align-items-center">
+                        <div class="col-xl-6 col-12 mb-4 mb-xl-0">
+                            <div class="bg-dark text-white p-4 rounded">
+                                <!-- progress 1 -->
+                                <h4 class="mb-5">Coversion Rates</h4>
+                                <h6 class="mb-3">Google Chrome</h6>
+                                <div class="progress mb-4" style="height: 20px">
+                                    <div class="progress-bar progress-bar-striped font-weight-bold" style="width: 91%">
+                                        91%
+                                    </div>
+                                </div>
+
+                                <!-- progress 2 -->
+                                <h6 class="mb-3">Mozilla Firefox</h6>
+                                <div class="progress mb-4" style="height: 20px">
+                                    <div class="progress-bar progress-bar-striped font-weight-bold bg-success" style="width: 82%">
+                                        82%
+                                    </div>
+                                </div>
+
+                                <!-- progress 3 -->
+                                <h6 class="mb-3">Safari</h6>
+                                <div class="progress mb-4" style="height: 20px">
+                                    <div class="progress-bar progress-bar-striped font-weight-bold bg-danger" style="width: 67%">
+                                        67%
+                                    </div>
+                                </div>
+
+                                <!-- progress 4 -->
+                                <h6 class="mb-3">IE</h6>
+                                <div class="progress mb-4" style="height: 20px">
+                                    <div class="progress-bar progress-bar-striped font-weight-bold bg-info" style="width: 10%">
+                                        10%
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of progress / task list -->
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
