--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -28,7 +28,7 @@
                 <div class="row">
                     <!-- sidebar -->
                     <div class="col-md-4 col-lg-3 col-xl-2 sidebar fixed-top">
-                        <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">Code Dashboard</a>
+                        <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">Sidebar Menu</a>
 
                         <div class="bottom-border pb-3">
                             <img src="images/admin.jpeg" alt="admin profile" width="50" class="rounded-circle mr-3">
@@ -730,6 +730,38 @@
         </div>
     </section>
     <!-- end of activities / quick post -->
+
+    <!-- footer -->
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+                    <div class="row border-top pt-3">
+                        <div class="col-lg-6 text-center">
+                            <ul class="list-inline">
+                                <li class="list-inline-item mr-2">
+                                    <a href="#" class="text-dark">DennisTheGeek</a>
+                                </li>
+                                <li class="list-inline-item mr-2">
+                                    <a href="#" class="text-dark">About</a>
+                                </li>
+                                <li class="list-inline-item mr-2">
+                                    <a href="#" class="text-dark">Support</a>
+                                </li>
+                                <li class="list-inline-item mr-2">
+                                    <a href="#" class="text-dark">Blog</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6 text-center">
+                            <p>&copy; 2018 Copyright. Made With <i class="fas fa-heart text-danger"></i> by <span class="text-success">DennisTheGeek</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- end of footer -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
