fine tune dashboard project

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -75,7 +75,7 @@
                                 <h4 class="text-light text-uppercase mb-0">Dashboard</h4>
                             </div>
 
-                            <div class="col-md-5">
+                            <div class="col-md-5 mb-sm-3">
                                 <form action="">
                                     <div class="input-group">
                                         <input type="text" class="form-control search-input" placeholder="Search">
@@ -94,7 +94,7 @@
                                         <a href="#" class="nav-link icon-bullet"><i class="fas fa-bell text-muted fa-lg navbar-icon"></i></a>
                                     </li>
 
-                                    <li class="nav-item icon-parent ml-md-auto">
+                                    <li class="nav-item icon-parent ml-md-auto ml-sm-1">
                                         <a href="#" class="nav-link no-outline" data-toggle="modal" data-target="#sign-out">
                                             <i class="fas fa-sign-out-alt text-danger fa-lg"></i>
                                         </a>
@@ -150,7 +150,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-footer text-secondary">
+                                <div class="card-footer text-secondary show-pointer">
                                     <i class="fas fa-sync mr-3"></i>
                                     <span>Update Now</span>
                                 </div>
@@ -169,7 +169,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-footer text-secondary">
+                                <div class="card-footer text-secondary show-pointer">
                                     <i class="fas fa-sync mr-3"></i>
                                     <span>Update Now</span>
                                 </div>
@@ -188,7 +188,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-footer text-secondary">
+                                <div class="card-footer text-secondary show-pointer">
                                     <i class="fas fa-sync mr-3"></i>
                                     <span>Update Now</span>
                                 </div>
@@ -207,7 +207,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-footer text-secondary">
+                                <div class="card-footer text-secondary show-pointer">
                                     <i class="fas fa-sync mr-3"></i>
                                     <span>Update Now</span>
                                 </div>
@@ -490,7 +490,7 @@
                             <div class="container-fluid bg-white">
                                 <div class="row py-3 mb-4 task-border align-items-center">
                                     <div class="col-1">
-                                        <input type="checkbox" checked>
+                                        <input type="checkbox">
                                     </div>
                                     <div class="col-sm-9 col-8">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -522,7 +522,7 @@
                             <div class="container-fluid bg-white">
                                 <div class="row py-3 mb-4 task-border align-items-center">
                                     <div class="col-1">
-                                        <input type="checkbox" checked>
+                                        <input type="checkbox">
                                     </div>
                                     <div class="col-sm-9 col-8">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
