--- a/photoX/index.html
+++ b/photoX/index.html
@@ -21,16 +21,19 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg fixed-top nav-menu">
 
+            <!-- logo -->
             <a href="#" class="navbar-brand text-light text-uppercase">
                 <span class="h2 font-weight-bold">photo</span><span class="h1">X</span>
             </a>
 
+            <!-- hamburger menu button -->
             <button class="navbar-toggler nav-button" type="button" data-toggle="collapse" data-target="#myNavbar">
                 <div class="bg-light line1"></div>
                 <div class="bg-light line2"></div>
                 <div class="bg-light line3"></div>
             </button>
 
+            <!-- navbar menu -->
             <div class="collapse navbar-collapse justify-content-end text-uppercase font-weight-bold" id="myNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -68,10 +71,58 @@
             <p class="lead banner-par">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         </div>
         <!-- end of banner -->
+
     </header>
     <!-- end of header -->
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <!-- mission section -->
+    <section class="p-5 mission">
+        <div class="container-fluid">
+            <!-- mission title -->
+            <div class="row text-white text-center">
+                <div class="col m-4">
+                    <h1 class="display-4 mb-4">Our Mission</h1>
+                    <div class="underline mb-4"></div>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium inventore, sint quisquam fugiat pariatur culpa officia. Eveniet omnis quia tempora.</p>
+                </div>
+            </div>
+
+            <!-- mission icons -->
+            <div class="row my-5">
+                <div class="col-md-4 text-center">
+                    <i class="fas fa-cogs fa-5x text-danger mb-4"></i>
+                    <h1 class="text-white mb-3">Creativity</h1>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic perferendis dolor vitae sed, quae officiis exercitationem quaerat? Fugit excepturi exercitationem inventore, repellendus architecto illum!</p>
+                </div>
+
+                <div class="col-md-4 text-center">
+                    <i class="far fa-thumbs-up fa-5x text-danger mb-4"></i>
+                    <h1 class="text-white mb-3">Quality</h1>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic perferendis dolor vitae sed, quae officiis exercitationem quaerat? Fugit excepturi exercitationem inventore, repellendus architecto illum!</p>
+                </div>
+
+                <div class="col-md-4 text-center">
+                    <i class="far fa-handshake fa-5x text-danger mb-4"></i>
+                    <h1 class="text-white mb-3">Experience</h1>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic perferendis dolor vitae sed, quae officiis exercitationem quaerat? Fugit excepturi exercitationem inventore, repellendus architecto illum!</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- mission highlight -->
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-5 text-center">
+                    <img src="images/camera.png" width="350" class="img-fluid camera-img">
+                </div>
+                <div class="col-lg-7 text-white text-lg-right text-center mission-text">
+                    <h1>We know what we do</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tempora itaque obcaecati voluptas? Perferendis voluptate accusantium eum sit deleniti harum, assumenda vitae! Cupiditate eos iusto ab rerum, voluptatum minima sed?</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of mission -->
 
     <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
             crossorigin="anonymous"></script>
