fix minor style issues

--- a/photoX/index.html
+++ b/photoX/index.html
@@ -528,7 +528,7 @@
                             <a href="#" class="footer-link text-uppercase">Support</a>
                         </li>
                         <li>
-                            <a href="#" class="text-info">dennisxiao.dev@gmail.com</a>
+                            <a href="#" class="text-info">hello@gmail.com</a>
                         </li>
                     </ul>
                 </div>
