fix gallery style

--- a/bookstore/index.html
+++ b/bookstore/index.html
@@ -37,7 +37,7 @@
 <!-- end of header -->
 
 <!-- gallery -->
-<section class="gallery">
+<section class="gallery pb-5">
     <div class="container">
         <!-- title -->
         <div class="row">
